applied static tool analysis and corrected the code. SonarLint, pmd, sonarqube